--- a/.github/workflows/main_ministry-website-fa.yml
+++ b/.github/workflows/main_ministry-website-fa.yml
@@ -1,41 +1,26 @@
 name: Deploy Flask API to Azure Functions
-
 on:
   push:
     branches:
-      - main  # ✅ Triggers deployment only on changes to main branch
-  workflow_dispatch:  # ✅ Allows manual deployment trigger
-
-permissions:
-  id-token: write
-  contents: read
-
+      - main
+  workflow_dispatch:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Setup Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.9'  # ✅ Recommended Python version for Azure Functions
-
+          python-version: '3.9'
       - name: Install dependencies
         run: |
           cd backend
           pip install -r requirements.txt
-
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
       - name: Deploy Flask API to Azure Functions
         uses: azure/functions-action@v1
         with:
-          app-name: "ministry-api"  # ✅ Replace with your actual Azure Function App name
-          package: "backend"  # ✅ Points to the Flask API folder inside your repo
+          app-name: "ministry-api"
+          package: "backend"
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
