--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
-Flask==2.2.3
-azure-functions==1.11.0
-python-dotenv==0.21.0
-requests==2.28.2
-gunicorn==20.1.0
+Flask==2.3.3
+azure-functions==1.16.0
+python-dotenv==1.0.0
+requests==2.31.0
+gunicorn==21.2.0
+Flask-Limiter==3.5.0
+Flask-CORS==4.0.0
+uvicorn==0.27.1
